# llm-agent-rl-lab

./: .gitignore  README.md  pyproject.toml
00-loss-function/: readme.md
01-grpo/: 01-demo-sync.py  02-demo-async.py  readme.md
02-opd/: 00-download-dataset.py  01-eval-ceval.py  01-eval-medical.py  03-medical-opd-sync.py  04-ceval-opd-async.py  analysis.py  readme.md
02-opd/general-opd/: 02-demo-async.py  readme.md
03-opd/: .env.example  01-eval-ceval.py  01-eval-medical.py  02-medical-sft.py  03-medical-opd-async.py  03-medical-opd-sync.py  04-opd-async.py  04-opd-sync.py  05-interleaved-multi-teacher-opd.py  analysis.py  readme.md
03-opd/general-opd/: 01-demo-sync.py  readme.md
03-search-r1/: .env.example  analyse.py  data.py  dev.md  eval.py  prepare_data.py  protocol.py  readme.md  reward.py  rollout.py  search.py  train.py
04-opsd/: 00-datasets.py  00-eval-aime25.py  01-opsd-async.py  01-opsd-sync.py  analysis.py  readme.md
