[project]
name = "llm-agent-rl-lab"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "pytrio==0.2.2",
    "swanlab>=0.8.4",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
]
